# Optimizer

./: .gitignore  CMakeLists.txt  main.cpp
headers/: Box.h  ConjugateGradient.h  Criteria.h  Function.h  LineSearch.h  Optimizer.h
src/: Box.cpp  ConjugateGradient.cpp  Criteria.cpp  Function.cpp  LineSearch.cpp
